--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
-
 services:
   gary-shell-bot:
     image: gary-shell-bot
-    restart: always
+    build: .
+    restart: unless-stopped
+    container_name: gary-shell-bot_c
 
